@@ -1,5 +1,8 @@
 Tue Aug 19 02:39:41 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
+	* syncase.scm: Don't tamper with debug mode setting when enabling
+	macros.  Instead cut the stack with start-stack.
+
 	* psyntax.pp, psyntax.ss (quasiquote): Changed fx= --> =.
 
 *	* syncase.scm: New file: Guile-adaption for syntax-case macros.
